--- a/server-config.json
+++ b/server-config.json
@@ -10,7 +10,7 @@
         "enableSessions": true,
         "secret": "vdW3F6y3506h",
         "sessionSecret": "vdW3F6y3506h",
-        "sessionMaxAge": 1000000,
+        "sessionMaxAge": 60000,
         "enableCORS": true,
         "AccessControlAllowOrigin": "*",
         "AccessControlAllowMethods": "GET,PUT,POST,DELETE,OPTIONS",
